# aura-staking

./: Anchor.toml  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  package.json  rustfmt.toml
.github/workflows/: ci-lint-test.yml  ci-lint.yml  ci-rust.yml  ci-tests.yml
cli/: Cargo.toml
cli/src/: decode.rs
clients/ts/: programId.ts
clients/ts/accounts/: Registrar.ts  Voter.ts  index.ts
clients/ts/instructions/: closeDepositEntry.ts  closeVoter.ts  configureVotingMint.ts  createDepositEntry.ts  createRegistrar.ts  createVoter.ts  deposit.ts  index.ts  logVoterInfo.ts  setTimeOffset.ts  unlockTokens.ts  updateVoterWeightRecord.ts  withdraw.ts
clients/ts/types/: DepositEntry.ts  LockingInfo.ts  Lockup.ts  LockupKind.ts  LockupPeriod.ts  VestingInfo.ts  VotingMintConfig.ts  VsrError.ts  index.ts
idl/: mpl_staking.ts  voter_stake_registry.json  voter_stake_registry.ts
program-states/: Cargo.toml
program-states/src/: error.rs  lib.rs
program-states/src/state/: deposit_entry.rs  lockup.rs  mod.rs  registrar.rs  voter.rs  voting_mint_config.rs
programs/mpl-staking/: Cargo.toml
programs/mpl-staking/src/: cpi_instructions.rs  lib.rs
programs/mpl-staking/src/instructions/: change_delegate.rs  claim.rs  close_deposit_entry.rs  close_voter.rs  configure_voting_mint.rs  create_deposit_entry.rs  create_voter.rs  extend_stake.rs  log_voter_info.rs  mod.rs  stake.rs  unlock_tokens.rs  update_voter_weight_record.rs  withdraw.rs
programs/mpl-staking/src/instructions/penalties/: allow_claiming.rs  allow_tokenflow.rs  decrease_rewards.rs  mod.rs  restrict_batch_minting.rs  restrict_claiming.rs  restrict_tokenflow.rs  slash.rs
programs/mpl-staking/tests/: decrease_rewards.rs  restrict_batch_minting.rs  test_all_deposits.rs  test_basic.rs  test_change_delegate.rs  test_claim.rs  test_deposit_constant.rs  test_deposit_no_locking.rs  test_extend_deposit.rs  test_lockup.rs  test_slashing.rs  test_stake.rs  test_voting.rs  test_withdraw.rs
programs/mpl-staking/tests/program_test/: addin.rs  governance.rs  mod.rs  rewards.rs  solana.rs  utils.rs
programs/voter-stake-registry/: Cargo.toml
programs/voter-stake-registry/src/: cpi_instructions.rs  error.rs  lib.rs  voter.rs
programs/voter-stake-registry/src/instructions/: change_authorized_agent.rs  change_delegate.rs  claim.rs  clawback.rs  close_deposit_entry.rs  close_voter.rs  configure_voting_mint.rs  create_deposit_entry.rs  create_registrar.rs  create_voter.rs  deposit.rs  extend_deposit.rs  extend_stake.rs  grant.rs  internal_transfer_locked.rs  internal_transfer_unlocked.rs  lock_tokens.rs  log_voter_info.rs  mod.rs  reset_lockup.rs  set_time_offset.rs  stake.rs  unlock_tokens.rs  update_max_vote_weight.rs  update_voter_weight_record.rs  withdraw.rs
programs/voter-stake-registry/src/state/: deposit_entry.rs  lockup.rs  registrar.rs  voter.rs  voting_mint_config.rs
programs/voter-stake-registry/tests/: change_authorized_agent.rs  close_voter.rs  rewards_invocations.rs  test_all_deposits.rs  test_basic.rs  test_change_delegate.rs  test_claim.rs  test_clawback.rs  test_deposit_cliff.rs  test_deposit_constant.rs  test_deposit_daily_vesting.rs  test_deposit_monthly_vesting.rs  test_deposit_no_locking.rs  test_extend_deposit.rs  test_grants.rs  test_internal_transfer.rs  test_internal_transfers.rs  test_lockup.rs  test_log_voter_info.rs  test_reset_lockup.rs  test_stake.rs  test_voting.rs
programs/voter-stake-registry/tests/fixtures/: spl-governance-3.1.0
programs/voter-stake-registry/tests/program_test/: addin.rs  cookies.rs  governance.rs  mod.rs  rewards.rs  solana.rs  utils.rs
