[workspace]
members = [
    "programs/*",
    "program-states"
    # Drop everything below this line before running "anchor publish":
    # Otherwise the build will fail since Anchor uploads only parts of the source tree.
]

[workspace.dependencies]
solana-program = "1.14.12"
solana-sdk = "1.14.12"
solana-program-test = "1.14.12"
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
static_assertions = "1.1"

[profile.release]
overflow-checks = true
