[workspace]
members = [
    "programs/*",
    "program-states"
    # Drop everything below this line before running "anchor publish":
    # Otherwise the build will fail since Anchor uploads only parts of the source tree.
]

[workspace.dependencies]
solana-program = "1.14.10"
solana-sdk = "1.14.10"
solana-program-test = "1.14.10"
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
static_assertions = "1.1"

[profile.release]
overflow-checks = true

[mplx-staking-states.clippy]
allow = ["clippy::result_large_err", "clippy::await_holding_refcell_ref"]
deny = ["warnings"]

[voter-stake-registry.clippy]
allow = ["clippy::result_large_err", "clippy::await_holding_refcell_ref"]
deny = ["warnings"]
