cargo-features = ["workspace-inheritance"]
[package]
name = "mplx-staking-states"
version = "0.0.1"
homepage = "https://github.com/blockworks-foundation/voter-stake-registry"
description = "MPLX staking program's state dependencies"
license = "GPL-3.0-or-later"
edition = "2021"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
test-sbf = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
static_assertions = { workspace = true }