cargo-features = ["workspace-inheritance"]
[package]
name = "mpl-staking"
version = "0.1.0"
description = "a voter weight plugin for spl-governance"
license = "GPL-3.0-or-later"
homepage = "https://github.com/blockworks-foundation/voter-stake-registry"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "mpl_staking"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
localnet = []
test-sbf = []

[dependencies]
# a) for deployment use these
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
static_assertions = { workspace = true }

bytemuck = "1.9.1"
spl-governance = { version = "3.1.1", features = ["no-entrypoint"] }
spl-governance-addin-api = "0.1.3"
mplx-staking-states = { path="../../program-states" }
mpl-common-constants = { git = "https://github.com/metaplex-foundation/mpl-common-constants", features = ["devnet"] }

[dev-dependencies]
solana-sdk = { workspace = true }
solana-program-test = { workspace = true }
spl-token = { version = "^3.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^1.0.3", features = ["no-entrypoint"] }
log = "0.4.14"
env_logger = "0.9.0"
base64 = "0.13.0"